# dyros_mobile_manipulator_controller

./: CMakeLists.txt  dyros_mobile_manipulator_controllers_plugin.xml  p_10_d_5.txt  p_40_d_10.txt  package.xml  singularity_position.txt
command/: hqp_joint_pos_obs.txt  input.txt  joint.txt
config/: dyros_mobile_manipulator_controllers.yaml
good_data/08.30/kp_460/: singularity_position_qtol.txt  singularity_value.txt
good_data/08.30/kp_460_circle_40s/: singularity_value.txt
good_data/08.30/kp_460_joint1_set/: singularity_value.txt
good_data/r_23/: singularity_value.txt
include/: fwd.h
include/HQP_dyros/: wholebody_controller.h
include/contacts/: contact-3d.h
include/controller/: Inverse-dynamics.h
include/dyros_mobile_manipulator_controllers/: hqp_wholebody_controller.h
include/robot/: robot_model.h
include/solvers/: solver-HQP-eiquadprog.h  solver-HQP-qpoases.h
include/tasks/: task-base.h  task-joint-bounds.h  task-joint-posture.h  task-operational.h  task-transition.h
include/trajectories/: trajectory-operationalspace.h
launch/: hqp_whole_body_controller.launch
src/: CMakeLists.txt  hqp_wholebody_controller.cpp
src/controller/: inverse-dynamics.cpp
src/robot/: robot_model.cpp
src/solvers/: solver-HQP-qpoases.cpp
src/tasks/: task-base.cpp  task-joint-bounds.cpp  task-joint-posture.cpp  task-operational.cpp  task-transition.cpp
src/trajectories/: trajectory-jointspace.cpp  trajectory-operationalspace.cpp
