<?xml version="1.0"?>
<package format="2">
  <name>dyros_mobile_manipulator_controllers</name>
  <version>0.0.1</version>
  <description>The dyros_mobile_manipulator_controllers package</description>

  <maintainer email="suhan@todo.todo">suhan</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>

  <depend>controller_interface</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>franka_hw</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>libfranka</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  
  <exec_depend>franka_control</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>panda_moveit_config</exec_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <controller_interface plugin="${prefix}/dyros_mobile_manipulator_controllers_plugin.xml"/>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
